--- a/Odoo 12/sale_payment_extend/views/res_config_settings.xml
+++ b/Odoo 12/sale_payment_extend/views/res_config_settings.xml
@@ -3,8 +3,8 @@
 
     <data>
 
-        <record id="view_res_config_settings_inherit_delca_account" model="ir.ui.view">
-            <field name="name">res.config.settings.inherit.delca.account</field>
+        <record id="view_res_config_settings_inherit_account" model="ir.ui.view">
+            <field name="name">res.config.settings.inherit.account</field>
             <field name="model">res.config.settings</field>
             <field name="inherit_id" ref="account.res_config_settings_view_form"/>
             <field name="arch" type="xml">
